# PyRoCo

./: .gitignore  README.md  pyproject.toml
data/: roverlist.txt
docs/: Docs.md  project-setup.md  raspi-setup.md
src/: app.py  main.py  motor_test.py  platform_info.py
src/controller/: __init__.py  input_controller.py
src/rover/: __init__.py  car_driver.py  controller.py  definitions.py  gpio_config.py  interface.py  motor.py  motor_control.py  pin_factory_config.py  utils.py
src/sonar/: __init__.py  distance_sensor.py  pin_check.py  sonar.py  stepper_motor.py
src/templates/: buttonrow.html  control.html  macros.html  status.html  steering.html
tests/: test_motor.py  test_sonar.py
